# image_processor

./: CMakeLists.txt  LICENSE  README.md  image_processor.cpp  test_pixelate.cpp  unit_tests.cpp  utils.h
filters/: crop.h  edge.cpp  edge.h  filters.cpp  filters.h  gauss.cpp  gauss.h  grayscale.cpp  grayscale.h  negative.cpp  negative.h  pixelate.cpp  pixelate.h  sharp.cpp  sharp.h
image/: color.h  image.cpp  image.h
parser/: parser.cpp
reading_and_writing/: reader.cpp  reader.h  writer.cpp  writer.h
test_script/: utils.h
test_script/data/: bad_format.txt
